Ajout d'effet de camera avec le timer
Ajout d'effet de camera avec le timer automatiser (Zoom in/out pis
rotation gauche/droite)

--- a/Infographie/ift3100/ift3100.vcxproj.filters
+++ b/Infographie/ift3100/ift3100.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="Primitives\ShapeGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Window.h">
@@ -100,6 +103,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Primitives\Vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
