--- a/Infographie/ift3100/ift3100.vcxproj
+++ b/Infographie/ift3100/ift3100.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animation2.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_Window.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -118,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation2.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="GeneratedFiles\ui_Window.h" />
     <ClInclude Include="Animation1.h" />
     <ClInclude Include="Include\Camera.hpp" />
